--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                     SQL
                 </li>
                 <li>
-                    SVN - GIT
+                    SVN - GIT - Jenkins - Jira
                 </li>
                 <li>
                     Windows - Linux
@@ -889,7 +889,6 @@
             <br>
             <hr class="hrFull"/>
         </div>
-
     </div>
 </section>
 <!-- end of education Section -->
@@ -994,8 +993,7 @@
                     </p>
                     <p class="FR">
                         J'aime voyager, il est toujours enrichissant de voir de nouvelles choses, de découvrir de
-                        nouvelles façons de vivre. Cela
-                        change profondément votre façon de penser, parfois cela permet de prendre du recul.
+                        nouvelles façons de vivre. Cela change profondément votre façon de penser et permet de prendre du recul.
                         C'est pourquoi en 2015 j'ai décidé de passer 6 mois à l'étranger: en Italie.
                     </p>
                     <p class="IT">
@@ -1004,6 +1002,7 @@
                         credeva di conoscere. Ecco perché nel 2015 ho deciso di studiare 6 mesi a Siena.
                     </p>
                 </div>
+
                 <hr class="hrFull"/>
             </div>
         </div>
@@ -1061,13 +1060,14 @@
         </div>
     </div>
 </section>
+<!-- end of contact Section -->
 
-<!-- end ofeducation Section -->
 <!-- Shall all the content after the end of the load -->
 <script type="text/javascript">
     showAfterLoad();
 </script>
 <!-- end of the script call-->
+
 </body>
 
 <!-- Footer -->
