--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
                             class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                 </li>
                 <li>
-                    <a href="mailto:contact@germainmoreau.com" class="btn btn-default btn-lg"><i
+                    <a href="mailto:germain.moreau@free.fr" class="btn btn-default btn-lg"><i
                             class="fa fa-envelope-o fa-fw"></i> <span class="network-name">e-mail</span></a>
                 </li>
                 <li>
