Update Business Part

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                  height="155">
 
             <p class="EN">
-                Hello, my name is Germain Moreau. I am 25 years old computer engineer.
+                Hello, my name is Germain Moreau. I am 27 years old business engineer
                 <br>
-                I am currently working at Acensi as a design and development engineer.
+                I am currently working at Acensi.
                 <br>
                 <br>
                 At the beginning if I choose to work in computer science that was because it was an intellectually
@@ -169,9 +169,9 @@
                 I appreciate having responsibilities, to be able to take initiative and the teamwork.
             </p>
             <p class="FR">
-                Bonjour, je m'apelle Germain Moreau. J'ai 25 ans et je suis ingénieur en informatique.
+                Bonjour, je m'apelle Germain Moreau. J'ai 27 ans et je suis ingénieur d'affaires.
                 <br>
-                Actuellement je suis en poste au sein d'Acensi en tant qu'Ingénieur d'études et développement.
+                Actuellement je suis en poste au sein d'Acensi.
                 <br>
                 <br>
                 J'ai choisi l'informatique car c'est un domaine stimulant intellectuellement me permettant d'exercer ma
@@ -190,9 +190,9 @@
                 d'équipe.
             </p>
             <p class="IT">
-                Ciao, mi chiamo Germain Moreau. Ho 25 anni e sono un ingegnere informatico.
+                Ciao, mi chiamo Germain Moreau. Ho 27 anni e sono un ingegnere commerciale.
                 <br>
-                Attualmente, sto lavorando presso la Acensi come ingegnere informatico.
+                Attualmente, sto lavorando presso Acensi.
                 <br>
                 <br>
                 All'inizio, se scelgo di lavorare in informatica era perché era un campo intellettualmente stimolante
@@ -228,14 +228,61 @@
                     learned from those experiences.
                 </p>
                 <p class="FR">
-                    Vous trouverez ici un résumé des différents postes que j'ai occupés, ce que j'y ai fait et appris.
+                    Vous trouverez ici un résumé des différents postes que j'ai occupé, ce que j'y ai fait et appris.
                 </p>
                 <p class="IT">
                     Troverete qui un riassunto dei vari posti che ho occupato, quello che ho fatto e imparato.
                 </p>
                 <ul class="timeline">
 
-                    <!--========= Acensi Section =========-->
+                    <!--========= Acensi business Section =========-->
+                    <li>
+                        <div class="timeline-badge">
+                            <i class="glyphicon glyphicon-qrcode"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">
+                                    Acensi
+                                </h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="jobTittle EN">Business Engineer</p>
+                                <p class="jobTittle FR">Ingénieur d'affaires</p>
+                                <p class="jobTittle IT">Ingegnere commercial</p>
+                                <p class="JobDate">
+                                    <small class="text-muted EN"><i class="glyphicon glyphicon-time"></i>
+                                        August 2018 - Today
+                                    </small>
+                                    <small class="text-muted FR"><i class="glyphicon glyphicon-time"></i>
+                                        Août 2018 - Aujourd'hui
+                                    </small>
+                                    <small class="text-muted IT"><i class="glyphicon glyphicon-time"></i>
+                                        Agosto 2018 - Oggi
+                                    </small>
+                                </p>
+                                <ul class="description EN">
+                                    <li>Business Development</li>
+                                    <li>Recruitment and Sourcing</li>
+                                    <li>Management</li>
+                                </ul>
+                                <ul class="description FR">
+                                    <li>Développement commercial</li>
+                                    <li>Recrutement et sourcing</li>
+                                    <li>Suivi et Management des collaborateurs</li>
+                                </ul>
+
+                                <ul class="description IT">
+                                    <li>Sviluppo aziendale</li>
+                                    <li>Reclutamento e sourcing</li>
+                                    <li>Seguito dei contributori</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <!--======= END OF acensi business Section ======-->
+
+                    <!--========= Acensi dev Section =========-->
                     <li class="timeline-inverted">
                         <div class="timeline-badge">
                             <i class="glyphicon glyphicon-plane"></i>
@@ -251,15 +298,15 @@
                                 <p class="JobDate">
                                     <small class="text-muted EN">
                                         <i class="glyphicon glyphicon-time"></i>
-                                        September 2017 - Now
+                                        September 2017 - July 2018
                                     </small>
                                     <small class="text-muted FR">
                                         <i class="glyphicon glyphicon-time"></i>
-                                        Septembre 2017 - Maintenant
+                                        Septembre 2017 - Juillet 2018
                                     </small>
                                     <small class="text-muted IT">
                                         <i class="glyphicon glyphicon-time"></i>
-                                        Settembre 2017 - Ora
+                                        Settembre 2017 - Luglio 2018
                                     </small>
                                 </p>
                                 <ul class="description EN">
@@ -283,7 +330,7 @@
                             </div>
                         </div>
                     </li>
-                    <!--=========== END OF Acensi Section ==========-->
+                    <!--=========== END OF Acensi dev Section ==========-->
 
                     <!--========= Atos Integration Section ===========-->
                     <li>
