Update picture and icon

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <!--========= Acensi business Section =========-->
                     <li>
                         <div class="timeline-badge">
-                            <i class="glyphicon glyphicon-qrcode"></i>
+                            <i class="glyphicon glyphicon-lock"></i>
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
